--- a/Alif 4/mystyle.css
+++ b/Alif 4/mystyle.css
@@ -38,6 +38,7 @@
         width: 20%;
         display:flex ;
         margin: 10px;
+        margin-left: 20px;
     } 
     .logo{
         color: #fff;
@@ -135,27 +136,27 @@
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        flex-wrap:wrap-reverse;
+        flex-wrap: wrap;        
 
     }
     .image{
         display: flex;
         flex-direction: column;
         align-items: baseline;
-        margin: 20px;
+        margin: 7px;
         height: 300px;
         width: 250px;
-        
+        transition-property: calc(0.5);
     }
     .image img{
         height: 300px;
-        width: 250px;
+        width: 200px;
         object-fit: cover;
         border-top-right-radius: 10px;
         border-top-left-radius: 10px;
     }
     .image p {
-        margin-top:20px;
+        margin-top:10px;
         margin-bottom:5px;
         font-size: 16px;
         color: #ff7200;
@@ -172,6 +173,15 @@
         display: flex;
     }
     .image:hover{
-        transform: scale(1.1);
+        transform: scale(1.05);
         
     }
+    .footer{
+        background-color: rgb(23, 22, 22);
+        color: #ff7200;
+        text-align: center;
+    }
+    .footer p{
+        text-align: left;
+    }
+    
